[package]
name = "osrm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
cheap-ruler = "0.4.0"
chksum-md5 = "0.0.0"
clap = "4.5.7"
colored = "2.1.0"
cucumber = { version = "0.21.1", features = ["tracing"] }
flatbuffers = "24.3.25"
futures = "0.3.30"
geo-types = "0.7.13"
help = "0.0.0"
log = "0.4.21"
reqwest = {version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.118"
xml-builder = "0.5.2"

[[test]]
name = "cucumber"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true

[build-dependencies]
flatc-rust = "0.2.0"
reqwest = {version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
toml = "0.8.14"
zip-extract = "0.1.3"
